--- a/index.html
+++ b/index.html
@@ -22,21 +22,12 @@
             <div id="tasks-list-container">
                 <h2>Estas são as suas tarefas</h2>
                 <ul id="tasks-list">
-                    <li class="tasks-box">
-                        <span class="task-title">Teste 1</span>
+                    <li class="tasks-box template hide">
+                        <span class="task-title" ></span>
                         <ion-icon class="done-btn" name="checkmark-outline"></ion-icon>
                         <ion-icon class="remove-btn" name="close-outline"></ion-icon>
                     </li>
-                    <li class="tasks-box">
-                        <span class="task-title">Teste 2</span>
-                        <ion-icon class="done-btn" name="checkmark-outline"></ion-icon>
-                        <ion-icon class="remove-btn" name="close-outline"></ion-icon>
-                    </li>
-                    <li class="tasks-box">
-                        <span class="tasks-title">Teste 3</span>
-                        <ion-icon class="done-btn" name="checkmark-outline"></ion-icon>
-                        <ion-icon class="remove-btn" name="close-outline"></ion-icon>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
